修正＋活動上稿

--- a/event_1.html
+++ b/event_1.html
@@ -46,8 +46,8 @@
       <div class='i_menu'><a href="about.html">關於燈會</a></div>
       <div class='i_menu'><a href="lantern_1.html">燈區介紹</a></div>
       <div class='i_menu'><a href="show.html">表演節目</a></div>
-      <div class='i_menu'><a href="event.html">活動資訊</a></div>
-      <div class='i_menu'><a class='aac' href="traffic.html">交通資訊</a></div>
+      <div class='i_menu'><a class='aac' href="event.html">活動資訊</a></div>
+      <div class='i_menu'><a href="traffic.html">交通資訊</a></div>
 
       <!-- mobile -->
       <div class='menu_list'>2020光之桃園・選單</div>
@@ -70,15 +70,22 @@
       <div class='cent_box'>
         <div class='tag_boxs'>
           <a class='tag_a' href="index.html">首頁</a>
-          <a class='tag_a' href="traffic.html">交通資訊</a>
+          <a class='tag_a' href="event.html">活動資訊</a>
+          <a class='tag_a' href="event_1.html">燈會小提燈</a>
         </div>
 
-        <div class='page_cent'>
-          <div class='news_box'>
-            <p class='p_title'>
-              敬請期待
-            </p>
-          </div>
+         <div class='news_box'>
+          <div class='plan_boxs'><a href="event.html">特色活動</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="event_1.html">燈會小提燈</a></div>
+          <div class='plan_boxs'><a href="event_2.html">刷市民卡換小禮物</a></div>
+          <div class='plan_boxs'><a href="event_3.html">景點推薦</a></div>
+          <div class='plan_boxs'><a href="event_4.html">手作提燈</a></div>
+        </div>
+
+        <div class='news_box'>
+          <p class='p_title'>
+            敬請期待
+          </p>
         </div>
       </div>
     </div>
