--- a/event_2.html
+++ b/event_2.html
@@ -46,8 +46,8 @@
       <div class='i_menu'><a href="about.html">關於燈會</a></div>
       <div class='i_menu'><a href="lantern_1.html">燈區介紹</a></div>
       <div class='i_menu'><a href="show.html">表演節目</a></div>
-      <div class='i_menu'><a href="event.html">活動資訊</a></div>
-      <div class='i_menu'><a class='aac' href="traffic.html">交通資訊</a></div>
+      <div class='i_menu'><a class='aac' href="event.html">活動資訊</a></div>
+      <div class='i_menu'><a href="traffic.html">交通資訊</a></div>
 
       <!-- mobile -->
       <div class='menu_list'>2020光之桃園・選單</div>
@@ -70,14 +70,27 @@
       <div class='cent_box'>
         <div class='tag_boxs'>
           <a class='tag_a' href="index.html">首頁</a>
-          <a class='tag_a' href="traffic.html">交通資訊</a>
+          <a class='tag_a' href="event.html">活動資訊</a>
+          <a class='tag_a' href="event_2.html">刷市民卡換小禮物</a>
         </div>
 
-        <div class='page_cent'>
-          <div class='news_box'>
-            <p class='p_title'>
-              敬請期待
-            </p>
+         <div class='news_box'>
+          <div class='plan_boxs'><a href="event.html">特色活動</a></div>
+          <div class='plan_boxs'><a href="event_1.html">燈會小提燈</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="event_2.html">刷市民卡換小禮物</a></div>
+          <div class='plan_boxs'><a href="event_3.html">景點推薦</a></div>
+          <div class='plan_boxs'><a href="event_4.html">手作提燈</a></div>
+        </div>
+
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>刷市民卡送好禮</div>
+
+          <div class='program_boxs'>
+            <span class='padbot20'>
+              活動期間每日6點起於新勢公園(飛天曙光燈區)、老街溪河岸公園(銀河曙光燈區)、光明公園(大地曙光燈區)服務台刷卡，即可兌換紀念品一份，數量有限，送完為止。
+            </span>
+            <a href="https://card.tycg.gov.tw/ap/index.aspx" target="_blank">桃園市民卡主題網：https://card.tycg.gov.tw/ap/index.aspx</a>
+            <img src="img/acpic012.jpg">
           </div>
         </div>
       </div>
