--- a/lantern_3.html
+++ b/lantern_3.html
@@ -108,7 +108,7 @@
         <p class='add_type pad20' title='地點：'>老街溪及河岸公園</p>
 
         <p class='p_cent_type padbot20'>
-          文字候補
+          展現老街溪整治成果，沿途有「光之巨龍秀、 光之動物園、 天使之翼、光影之窗」等燈組，來一套親水之旅，感受水色風光吧。
         </p>
 
         <img class='all_img' src="img/l03.jpg">
