--- a/lantern_306.html
+++ b/lantern_306.html
@@ -112,7 +112,7 @@
           搭配小烏來的天空步道，這是一處以天空步道，搭配穿著原住民服飾的小倉鼠吉祥物，身在天空步道旁的可愛畫面，體現了桃園小烏來的特色，也呼應了鼠年的傳統花燈意象，打造出一座有桃園特色又吸引目光的藝術花燈。
         </p>
 
-        <img class='all_img' src="img/gg.png">
+        <img class='all_img' src="img/l03_06.png">
       </div>
     </div>
 
