--- a/lantern_309.html
+++ b/lantern_309.html
@@ -112,7 +112,7 @@
           桃園市著名的大溪石門水庫，景色山清水秀，是桃園一塊地靈人傑的好處，這裡將石門水庫搭配可愛的倉鼠吉祥物，帶著民眾一起悠閒的在石門水庫眺望美景，也呼應了鼠年的傳統花燈意象，打造出一座具有桃園特色又吸引目光的藝術花燈。
         </p>
 
-        <img class='all_img' src="img/gg.png">
+        <img class='all_img' src="img/l03_09.png">
       </div>
     </div>
 
