--- a/lantern_310.html
+++ b/lantern_310.html
@@ -112,7 +112,7 @@
           搭配桃園市著名的虎頭山，虎頭山不僅是有許多家庭假日的好去處，這裡讓可愛的倉鼠吉祥物帶著民眾一起登山，更可體驗到奧爾森林學堂的美麗之處，也呼應了鼠年的傳統花燈意象，打造出一座既有桃園特色又吸引目光的藝術花燈。
         </p>
 
-        <img class='all_img' src="img/gg.png">
+        <img class='all_img' src="img/l03_10.png">
       </div>
     </div>
 
