--- a/lantern_311.html
+++ b/lantern_311.html
@@ -112,7 +112,7 @@
           用七彩積木的方形框架，外部有七彩線條的彩繪，將「天空之城」的藍天白雲等影像展現在迴廊幻彩之中，讓民眾與燈飾燈藝結合為一。從白天連貫到晚上，都是一場令人驚豔的展覽與演出。
         </p>
 
-        <img class='all_img' src="img/l03_11.png">
+        <img class='all_img' src="img/gg.png">
       </div>
     </div>
 
