--- a/news.html
+++ b/news.html
@@ -75,6 +75,10 @@
 
         <div class='page_cent'>
           <div class='news_box'>
+            <div class='n_date'>2020.01.09</div>
+            <a class='n_titel n_outlink' href='https://www.youtube.com/watch?v=yEPLSLzqNjc&feature=youtu.be' target="_blank">台灣第一個燈會專屬樂團~「曙光樂團」曙光歌曲錄音花絮</a>
+          </div>
+          <div class='news_box'>
             <div class='n_date'>2020.01.06</div>
             <a class='n_titel n_outlink' href='https://www.tycg.gov.tw/ch/home.jsp?id=7&parentpath=0,1&mcustomize=multimessage_view.jsp&dataserno=201912310006&aplistdn=ou=hotnews,ou=chinese,ou=ap_root,o=tycg,c=tw&toolsflag=Y&language=Chinese' target="_blank">桃園燈會曝光第一炮 專屬「曙光樂團」創作「主題曲」暨「主視覺」發表會</a>
           </div>
