--- a/show_1.html
+++ b/show_1.html
@@ -88,8 +88,9 @@
           </p>
         </div>
 
-        <p class='add_type add_2 padtop20' title='演出場次：'>每晚三場次，每場次20-30分鐘</p>
+        <p class='add_type padtop20' title='演出地點：'>銀河曙光燈區</p>
         <p class='add_type add_2 padtop20' title='演出時間：'>19:00、20:00、21:00</p>
+        <p class='add_type add_2 padtop20' title='演出長度：'>每場次20-30分鐘</p>
 
         <img class='all_img padtop20' src="img/s01.png">
       </div>
