--- a/show_3.html
+++ b/show_3.html
@@ -102,7 +102,7 @@
 
         <div class='news_box'>
           <div class='plan_boxs'><a href="show_3_01.html">曙(鼠)光樂團・介紹</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="show_3.html">曙光Light Up・歌詞</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="show_3.html">曙光・歌詞</a></div>
         </div>
 
         <div class='news_box'>
@@ -110,7 +110,7 @@
         </div>
 
         <div class='news_box'>
-          <p class='p_title p_pink'>曙光Light Up</p>
+          <p class='p_title p_pink'>曙光</p>
         </div>
 
         <p class='add_type pad20 add_3'>詞曲＼陳進中</p>
