--- a/lantern_305.html
+++ b/lantern_305.html
@@ -112,7 +112,7 @@
           運用老街溪河岸邊的窗框藝術，每扇門打開你對世界的光明想像，每扇窗讓你看盡人生的繁華熱鬧。「沈浸式體驗」讓每個人以窗框為背景瞬間的穿越，按下快門的分秒就是永恆！大家一起記錄下2020桃園燈會的美好回憶。
         </p>
 
-        <img class='all_img' src="img/l03_05.png">
+        <img class='all_img' src="img/gg.png">
       </div>
     </div>
 
