--- a/lantern_307.html
+++ b/lantern_307.html
@@ -112,7 +112,7 @@
           搭配桃園有名的大溪老街，這是一處以大溪老街，搭配著可愛的倉鼠吉祥物，融入了陣頭文化的服裝，展現了在地的文化特色，呼應了鼠年的傳統花燈意象，打造出一座有桃園特色又吸引目光的藝術花燈。
         </p>
 
-        <img class='all_img' src="img/gg.png">
+        <img class='all_img' src="img/l03_07.png">
       </div>
     </div>
 
