--- a/lantern_308.html
+++ b/lantern_308.html
@@ -112,7 +112,7 @@
           每年吸引眾多人的「蓮花季」打造在桃園燈會，讓每個來參與燈會的朋友都能同時感受到蓮花的絢麗，搭配可愛的倉鼠吉祥物，體現了桃園花彩的特色，也呼應了鼠年的傳統花燈意象，打造出一座有桃園特色又吸引目光的藝術花燈。
         </p>
 
-        <img class='all_img' src="img/gg.png">
+        <img class='all_img' src="img/l03_08.png">
       </div>
     </div>
 
