--- a/show_0.html
+++ b/show_0.html
@@ -87,8 +87,7 @@
         </div>
 
         <div class='news_box pad20'>
-          <p class='add_type add_2' title='日期：'>自1月31日至2月12日，共13天。</p>
-          <p class='add_type add_2' title='時間：'>每晚18:30-21:30，每日演出約三小時。</p>
+          <p class='add_type add_2' title='日期：'>自1月31日至2月12日</p>
         </div>
 
         <div class='program_boxs'>
