--- a/show_3_01.html
+++ b/show_3_01.html
@@ -84,7 +84,7 @@
 
         <div class='news_box'>
           <div class='plan_boxs'><a class='plan_ok' href="show_3_01.html">曙(鼠)光樂團・介紹</a></div>
-          <div class='plan_boxs'><a href="show_3.html">曙光Light Up・歌詞</a></div>
+          <div class='plan_boxs'><a href="show_3.html">曙光・歌詞</a></div>
         </div>
 
         <div class='news_box'>
