活動上完稿

--- a/event.html
+++ b/event.html
@@ -74,7 +74,7 @@
           <a class='tag_a' href="event.html">特色活動</a>
         </div>
 
-         <div class='news_box'>
+         <div class='news_box sbord'>
           <div class='plan_boxs'><a class='plan_ok' href="event.html">特色活動</a></div>
           <div class='plan_boxs'><a href="event_1.html">燈會小提燈</a></div>
           <div class='plan_boxs'><a href="event_2.html">刷市民卡換小禮物</a></div>
@@ -82,11 +82,51 @@
           <div class='plan_boxs'><a href="event_4.html">手作提燈</a></div>
         </div>
 
-        <div class='news_box'>
-          <p class='p_title'>
-            敬請期待
-          </p>
+        <!-- 01 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>水漂光球・祈求幸福</div>
+          <div class='program_boxs'>
+            <span class='padbot20'>
+              老街溪在整治建設後使沿岸充滿幸福能量，在燈會期間特別設置幸福光球讓民眾一 起參與祈願幸福，讓承載著人們願望的小光球順著老街溪漂流形成一條「幸福銀河」
+            </span>
+          </div>
         </div>
+        <div class='news_box'>
+          <p class='add_type add_2 padbot20 be_g' title='地點：'>中央橋上</p>
+          <p class='add_type add_2 padbot20 be_g' title='時間：'>01/31 - 02/12 18:00起，每30分鐘一次</p>
+          <p class='add_type padtop20 be_g' title='參加辦法：'>於幸福光橋服務站登記領取，每場數量有限(活動辦法如有更動以現場公告為準)</p>
+        </div>
+
+        <!-- 02 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>夜光踩街・老鼠娶親</div>
+          <div class='program_boxs'>
+            <span class='padbot20'>
+              桃園原創！台灣全新創作夜光遊行「老鼠娶親」夜光踩街秀！
+            </span>
+          </div>
+        </div>
+        <div class='news_box'>
+          <p class='add_type add_2 padbot20 be_g' title='地點：'>老街溪沿岸河濱公園  老鼠娶親活動現場</p>
+          <p class='add_type add_2 padbot20 be_g' title='時間：'>01/31-02/12 18:30、19:30、20:30</p>
+          <p class='add_type padtop20 be_g' title='參加辦法：'>招攬20位民眾扮演老鼠參加遊行。(活動辦法如有更動以現場公告為準)</p>
+        </div>
+
+        <!-- 03 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>2020桃園燈會・開幕儀式</div>
+          <div class='program_boxs'>
+            <span class='padbot20'>
+              2020桃園燈會「光之桃花源」，及台灣第一個燈會專屬「曙(鼠)光樂團」，邀請大家一起唱出曙光，照亮桃園幸福城市
+            </span>
+          </div>
+        </div>
+        <div class='news_box'>
+          <p class='add_type add_2 padbot20 be_g' title='地點：'>平鎮新勢公園</p>
+          <p class='add_type add_2 padbot20 be_g' title='時間：'>01/31</p>
+          <p class='add_type padtop20 be_g' title='參加辦法：'>自由參加</p>
+        </div>
+
       </div>
     </div>
 
