--- a/event_1.html
+++ b/event_1.html
@@ -83,9 +83,44 @@
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>
-            敬請期待
-          </p>
+          <p class='add_type' title='發送日期：'>桃園燈會期間每周六(2/1、2/8)發送【鼠來運轉】、每周日(2/2、2/9)發送【錢鼠遊桃園】。</p>
+          <p class='add_type padtop20' title='發送時間：'>燈會活動期間每週六、日下午5點開始，數量有限，送完為止。</p>
+          <p class='add_type padtop20' title='發送地點：'>新勢公園及光明公園小提燈發放處。</p>
+        </div>
+
+        <div class='show_boxs'>
+          <div class='show_box'>
+            <div class='sb_l'><img src="img/e01.png"></div>
+            <div class='sb_r'>
+              <div class='s_name' title="鼠來運轉：">首創能「溜」上街的小提燈</div>
+              <div class='s_type'>
+                <b>・元寶形提把：</b>手握元寶「鼠來發」</br>
+                <b>・三節式提線：</b>自由調節長度，可提、可拉、可互動</br>
+                <b>・豐滿如水蜜桃的身材：</b>豐衣足食，國泰民安</br>
+                <b>・大大的圓耳：</b>招人氣、兼招財</br>
+                <b>・上翹的尾巴：</b>後勢看俏、一路長發</br>
+                <b>・腿部的水滴狀鏤空：</b>風調雨順、風生水起</br>
+                <b>・腳部踩風火輪：</b>財源滾滾，三元及第</br>
+                <b>・可動的前肢：</b>可互動、可站立、可奔跑</br>
+                <b>・紅色上翹的尾巴：</b>路長紅、後勢看俏
+              </div>
+            </div>
+          </div>
+
+          <div class='show_box'>
+            <div class='sb_l'><img src="img/e02.png"></div>
+            <div class='sb_r'>
+              <div class='s_name' title="錢鼠遊桃園：">傳統宮燈造型，還能當桌燈點綴環境</div>
+              <div class='s_type'>
+                <b>・</b>錢鼠身著春、福、壽、喜，為來年獻上祝福之意，雙耳以銅錢表示，共有八枚，意喻財源廣進。</br>
+                <b>・</b>鼠前扣點，以龍潭花生為設計概念，扣住銅錢意指來年豐衣足食。</br>
+                <b>・</b>鼠尾造型，如橫寫之阿拉伯字之「8」，取其諧音「發」，意味橫著發。</br>
+                <b>・</b>燈體四面，分別描繪出桃園特色景點如「慈湖春曉」、「石門勝景」、「大溪老街」、「機場迎賓」等特色。</br>
+                <b>・</b>燈底下的古錢「唯吾知足」其中的意義是要我們學習外圓（寛以待人）內方（嚴以律己）。</br>
+                <b>・</b>除了元宵節可提燈之外，也可靜置在桌上，做為桌燈使用。</br>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
