--- a/event.html
+++ b/event.html
@@ -36,9 +36,9 @@
     
     <div class='i_menu_boxs'>
       <div class='i_icon_boxs'>       
-        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動表下載</a>
-        <a href="" class='icon-instagram'></a>
-        <a href="" class='icon-facebook2'></a>
+        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
+        <a href="https://www.instagram.com/taoyuantravel/?hl=zh-tw" target='_blank' class='icon-instagram'></a>
+        <a href="https://www.facebook.com/traveltaoyuan/" target='_blank' class='icon-facebook2'></a>
       </div>
 
       <div class='i_menu'><a href="index.html">首&nbsp;&nbsp;頁</a></div>
@@ -113,6 +113,44 @@
         </div>
 
         <!-- 03 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>2020龍潭迎古董接財神</div>
+          <div class='program_boxs'>
+            <span class='padbot20'>
+              「迎古董、接財神」是龍潭的百年傳統。「迎古董」可追溯至日本昭和時期，龍潭分為上街及下街，元宵節期間上、下街居民互相揶揄調侃，是市民的生活樂趣；「接財神」藉由祭祀財神爺以增添財運。
+            </span>
+          </div>
+        </div>
+        <div class='news_box'>
+          <p class='add_type add_2 padbot20 be_g' title='時間：'>2月8日(六)龍潭接財神</p>
+          <p class='add_type add_2 padbot20 be_g' title='地點：'>龍潭龍元宮</p>
+          <p class='add_type add_2 padbot20 be_g' title='時間：'>2月9日(日)龍潭迎古董</p>
+          <p class='add_type add_2 padbot20 be_g' title='地點：'>龍潭市區、龍潭龍元宮</p>
+        </div>
+
+        <!-- 04 -->
+        <div class='lantern_boxs'>
+          <div class='lantern_title sec_title'>2020靚靚楊梅慶元宵</div>
+          <div class='program_boxs'>
+            <span class='padbot20'>
+              楊梅地區每逢元宵時節「初九南巡進香、初十二花燈迎媽祖遶境」的傳統已流傳近百年，藉此活動傳承花燈踩街文化。
+            </span>
+          </div>
+        </div>
+        <div class='news_box'>
+          <p class='add_type add_2 padbot20 be_g' title='時間：'>1月20日(一)至2月13日(四)</p>
+          <p class='add_type add_2 padbot20 be_g' title='地點：'>客庄街景藝術展覽楊梅區主要街道</p>
+          <p class='add_type add_2 padbot20 be_g' title='時間：'>2月5日(三)媽祖進香回鑾遶境</p>
+          <p class='add_type add_2 padbot20 be_g' title='地點：'>楊梅火車站後站</p>
+          <p class='add_type add_2 padbot20 be_g' title='時間：'>2月5日(三)至2月6日(四)花燈車遶境</p>
+          <p class='add_type add_2 padbot20 be_g' title='地點：'>宣傳楊梅各里主要街道</p>
+          <p class='add_type add_2 padbot20 be_g' title='時間：'>2月7日(五)花燈車踩街競賽遊行</p>
+          <p class='add_type add_2 padbot20 be_g' title='地點：'>楊梅火車站後站及周邊主要街道</p>
+          <p class='add_type add_2 padbot20 be_g' title='時間：'>2月8日(六)元宵晚會</p>
+          <p class='add_type add_2 padbot20 be_g' title='地點：'>楊梅火車站後站</p>
+        </div>
+
+        <!-- 05 -->
         <div class='lantern_boxs'>
           <div class='lantern_title sec_title'>2020桃園燈會・開幕儀式</div>
           <div class='program_boxs'>
