--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     
     <div class='i_menu_boxs'>
       <div class='i_icon_boxs'>       
-        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動表下載</a>
-        <a href="" class='icon-instagram'></a>
-        <a href="" class='icon-facebook2'></a>
+        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
+        <a href="https://www.instagram.com/taoyuantravel/?hl=zh-tw" target='_blank' class='icon-instagram'></a>
+        <a href="https://www.facebook.com/traveltaoyuan/" target='_blank' class='icon-facebook2'></a>
       </div>
 
       <div class='i_menu'><a class='aac' href="index.html">首&nbsp;&nbsp;頁</a></div>
