--- a/news.html
+++ b/news.html
@@ -36,9 +36,9 @@
     
     <div class='i_menu_boxs'>
       <div class='i_icon_boxs'>       
-        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動表下載</a>
-        <a href="" class='icon-instagram'></a>
-        <a href="" class='icon-facebook2'></a>
+        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
+        <a href="https://www.instagram.com/taoyuantravel/?hl=zh-tw" target='_blank' class='icon-instagram'></a>
+        <a href="https://www.facebook.com/traveltaoyuan/" target='_blank' class='icon-facebook2'></a>
       </div>
 
       <div class='i_menu'><a href="index.html">首&nbsp;&nbsp;頁</a></div>
@@ -74,6 +74,39 @@
         </div>
 
         <div class='page_cent'>
+          <div class='news_box'>
+            <div class='n_date'>2020.01.12</div>
+            <a class='n_titel n_outlink' href='https://www.youtube.com/watch?v=LbIcGFVDsXQ&feature=youtu.be' target="_blank">2020桃園燈會・展現客庄陂塘水岸風情</a>
+          </div>
+          <div class='news_box'>
+            <div class='n_date'>2020.01.11</div>
+            <a class='n_titel n_outlink' href='https://www.ftvnews.com.tw/AMP/News_Amp.aspx?id=2020102N04M1' target="_blank">2020桃園燈會・設計師張漢寧打造燈會主視覺</a>
+          </div>
+          <div class='news_box'>
+            <div class='n_date'>2020.01.10</div>
+            <a class='n_titel n_outlink' href='https://www.youtube.com/watch?v=4CpTmsfGXAk' target="_blank">燈會主視覺公佈・點亮光之桃花源</a>
+          </div>
+          <div class='news_box'>
+            <div class='n_date'>2020.01.09</div>
+            <a class='n_titel n_outlink' href='https://youtu.be/Ybo2tZ1dH9Y' target="_blank">桃園燈會1/31登場・大師打造主視覺.首創自組樂團</a>
+          </div>
+          <div class='news_box'>
+            <div class='n_date'>2020.01.08</div>
+            <a class='n_titel n_outlink' href='https://youtu.be/h1yfWbdTCTY' target="_blank">桃園燈會製作主題曲【曙光】點亮桃園</a>
+          </div>
+          <div class='news_box'>
+            <div class='n_date'>2020.01.07</div>
+            <a class='n_titel n_outlink' href='https://youtu.be/_Ud0I0pqkrI' target="_blank">2020桃園燈會月底登場・曙光主題曲迎鼠年</a>
+          </div>
+          <div class='news_box'>
+            <div class='n_date'>2020.01.06</div>
+            <a class='n_titel n_outlink' href='https://youtu.be/GTBchy2ecpc' target="_blank">桃園燈會一月底點亮・打造光之桃花園</a>
+          </div>
+          <div class='news_box'>
+            <div class='n_date'>2020.01.06</div>
+            <a class='n_titel n_outlink' href='https://youtu.be/KiUZOJcf_1Y' target="_blank">2020桃園燈會添亮點・首創燈會樂團唱出新曙光</a>
+          </div>
+
           <div class='news_box'>
             <div class='n_date'>2020.01.09</div>
             <a class='n_titel n_outlink' href='https://www.youtube.com/watch?v=yEPLSLzqNjc&feature=youtu.be' target="_blank">台灣第一個燈會專屬樂團~「曙光樂團」曙光歌曲錄音花絮</a>
