--- a/show_1.html
+++ b/show_1.html
@@ -30,15 +30,32 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="fav/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <style type="text/css">
+      .video-container {
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 30px;
+        height: 0;
+        overflow: hidden;
+      }
+
+      .video-container iframe, .video-container object, .video-container embed {
+        position: absolute;
+        top: 0;left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
   
   <body>
     
     <div class='i_menu_boxs'>
       <div class='i_icon_boxs'>       
-        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動表下載</a>
-        <a href="" class='icon-instagram'></a>
-        <a href="" class='icon-facebook2'></a>
+        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
+        <a href="https://www.instagram.com/taoyuantravel/?hl=zh-tw" target='_blank' class='icon-instagram'></a>
+        <a href="https://www.facebook.com/traveltaoyuan/" target='_blank' class='icon-facebook2'></a>
       </div>
 
       <div class='i_menu'><a href="index.html">首&nbsp;&nbsp;頁</a></div>
@@ -91,6 +108,17 @@
         <p class='add_type padtop20' title='演出地點：'>銀河曙光燈區</p>
         <p class='add_type add_2 padtop20' title='演出時間：'>19:00、20:00、21:00</p>
         <p class='add_type add_2 padtop20' title='演出長度：'>每場次20-30分鐘</p>
+
+        <p class='p_cent_type pad20'>
+          在真實生活中，你有看過會動的龍嗎？來一起顛覆你的想像力吧!白天是大型雕塑，晚上會「亮起來」變成一個「機械、科技、燈藝」燈組，和法國機械巨獸馬戲團的互動展演，透過燈光特效及奇幻劇情，這是一場華麗冒險的光之巨龍秀。
+          </br></br>
+          法國機械巨獸馬戲團於2006年創立，這裡聚集了一群志同道合的技術人員和藝術家們，成員們心中都有個神奇世界，不論是天上飛、地上走、水裡游的生物，都變成了現實中的神奇世界，邀請
+          大家一起大開眼界吧!
+        </p>
+
+        <div class='video-container'>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/fIG66YAMNI0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
 
         <img class='all_img padtop20' src="img/s01.png">
       </div>
