--- a/show_2.html
+++ b/show_2.html
@@ -36,9 +36,9 @@
     
     <div class='i_menu_boxs'>
       <div class='i_icon_boxs'>       
-        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動表下載</a>
-        <a href="" class='icon-instagram'></a>
-        <a href="" class='icon-facebook2'></a>
+        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
+        <a href="https://www.instagram.com/taoyuantravel/?hl=zh-tw" target='_blank' class='icon-instagram'></a>
+        <a href="https://www.facebook.com/traveltaoyuan/" target='_blank' class='icon-facebook2'></a>
       </div>
 
       <div class='i_menu'><a href="index.html">首&nbsp;&nbsp;頁</a></div>
@@ -90,7 +90,10 @@
         <p class='add_type padtop20' title='演出地點：'>銀河曙光燈區</p>
         <p class='add_type add_2 padtop20' title='演出時間：'>18:30、19:30、20:30</p>
         <p class='add_type add_2 padtop20' title='演出長度：'>每場次20-30分鐘</p>
-
+        <p class='p_cent_type pad20'>
+          2月5日：老鼠娶親的第一場於楊梅後站展演</br>
+          2月8日：老鼠娶親出發點-開蓋廣場
+        </p>
         <img class='all_img padtop20' src="img/s02.png">
       </div>
     </div>
