--- a/show_3.html
+++ b/show_3.html
@@ -54,9 +54,9 @@
     
     <div class='i_menu_boxs'>
       <div class='i_icon_boxs'>       
-        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動表下載</a>
-        <a href="" class='icon-instagram'></a>
-        <a href="" class='icon-facebook2'></a>
+        <a href="" class='icon-inbox-download'>&nbsp;&nbsp;活動DM下載</a>
+        <a href="https://www.instagram.com/taoyuantravel/?hl=zh-tw" target='_blank' class='icon-instagram'></a>
+        <a href="https://www.facebook.com/traveltaoyuan/" target='_blank' class='icon-facebook2'></a>
       </div>
 
       <div class='i_menu'><a href="index.html">首&nbsp;&nbsp;頁</a></div>
@@ -111,6 +111,12 @@
 
         <div class='news_box'>
           <p class='p_title p_pink'>曙光</p>
+        </div>
+
+        <div class='news_box'>
+          <a href="https://lnk.to/dawn" target="_blank">・音樂收聽平台入口</a>
+          <a href="https://www.kkbox.com/tw/tc/song/w6U00LOY84LXJzInXJzIn0XL-index.html" target="_blank">・Kkbox</a>
+          <a href="https://www.mymusic.net.tw/ux/w/album/show/1441264" target="_blank">・My Music</a>
         </div>
 
         <p class='add_type pad20 add_3'>詞曲＼陳進中</p>
