--- a/traffic.html
+++ b/traffic.html
@@ -141,6 +141,8 @@
             <div class='td to tll tdd' title='抵達燈區站牌名稱'>興國市場(中豐北路)</div>
           </div>
         </div>
+        </br></br>
+        <img class='all_img' src="img/tra01.png">
 
       </div>
     </div>
