--- a/traffic_01.html
+++ b/traffic_01.html
@@ -89,44 +89,22 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="traffic.html">交通資訊</a>
           <a class='tag_a' href="traffic.html">燈區位置圖</a>
+          <a class='tag_a' href="traffic_01.html">捷運/高鐵/火車</a>
         </div>
 
         <div class='news_box sbord'>
-          <div class='plan_boxs'><a class='plan_ok' href="traffic.html">燈區位置圖</a></div>
-          <div class='plan_boxs'><a href="traffic_01.html">捷運/高鐵/火車</a></div>
+          <div class='plan_boxs'><a href="traffic.html">燈區位置圖</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="traffic_01.html">捷運/高鐵/火車</a></div>
           <div class='plan_boxs'><a href="traffic_02.html">公車/免費接駁車</a></div>
           <div class='plan_boxs'><a href="traffic_03.html">自行開車</a></div>
         </div>
 
-        <!-- 01 -->
-        <div class='lantern_boxs'>
-          <div class='lantern_title sec_title'>平鎮新勢公園・飛天曙光燈區</div>
+        <div class='news_box'>
+          <p class='p_title'>
+            敬請期待
+          </p>
         </div>
-        </br></br>
-        <div class='video-container'>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3832.4574091367417!2d121.21706054002114!3d24.953928966509437!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346823b34a9a1fa9%3A0xf1307561b4cd8101!2z5paw5Yui5YWs5ZyS!5e0!3m2!1szh-TW!2stw!4v1578919684466!5m2!1szh-TW!2stw" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </div>
-
-        <!-- 02 -->
-        <div class='lantern_boxs'>
-          <div class='lantern_title sec_title'>中壢光明公園・大地曙光燈區</div>
-        </div>
-        </br></br>
-        <div class='video-container'>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3832.251455732897!2d121.2166172345899!3d24.960545037934928!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346823ccab27624d%3A0x8feb251df64fb200!2z5YWJ5piO5YWs5ZyS!5e0!3m2!1szh-TW!2stw!4v1578919742724!5m2!1szh-TW!2stw" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </div>
-
-        <!-- 03 -->
-        <div class='lantern_boxs'>
-          <div class='lantern_title sec_title'>老街溪及老街溪河岸公園・銀河曙光燈區</div>
-        </div>
-        </br></br>
-        <div class='video-container'>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3832.2835383343613!2d121.21724240891598!3d24.95951452059277!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb27a93f4eb17f9f7!2z6ICB6KGX5rqq5rKz5bK45YWs5ZyS!5e0!3m2!1szh-TW!2stw!4v1578919778638!5m2!1szh-TW!2stw" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </div>
-        </br></br>
-        <img class='all_img' src="img/tra01.png">
-        </br></br>
+        
       </div>
     </div>
 
