--- a/traffic_02.html
+++ b/traffic_02.html
@@ -30,23 +30,6 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="fav/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
-    <style type="text/css">
-      .video-container {
-        position: relative;
-        padding-bottom: 56.25%;
-        padding-top: 30px;
-        height: 0;
-        overflow: hidden;
-      }
-
-      .video-container iframe, .video-container object, .video-container embed {
-        position: absolute;
-        top: 0;left: 0;
-        width: 100%;
-        height: 100%;
-      }
-    </style>
   </head>
   
   <body>
@@ -89,44 +72,78 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="traffic.html">交通資訊</a>
           <a class='tag_a' href="traffic.html">燈區位置圖</a>
+          <a class='tag_a' href="traffic_02.html">公車/免費接駁車</a>
         </div>
 
         <div class='news_box sbord'>
-          <div class='plan_boxs'><a class='plan_ok' href="traffic.html">燈區位置圖</a></div>
+          <div class='plan_boxs'><a href="traffic.html">燈區位置圖</a></div>
           <div class='plan_boxs'><a href="traffic_01.html">捷運/高鐵/火車</a></div>
-          <div class='plan_boxs'><a href="traffic_02.html">公車/免費接駁車</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="traffic_02.html">公車/免費接駁車</a></div>
           <div class='plan_boxs'><a href="traffic_03.html">自行開車</a></div>
         </div>
 
-        <!-- 01 -->
-        <div class='lantern_boxs'>
-          <div class='lantern_title sec_title'>平鎮新勢公園・飛天曙光燈區</div>
-        </div>
         </br></br>
-        <div class='video-container'>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3832.4574091367417!2d121.21706054002114!3d24.953928966509437!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346823b34a9a1fa9%3A0xf1307561b4cd8101!2z5paw5Yui5YWs5ZyS!5e0!3m2!1szh-TW!2stw!4v1578919684466!5m2!1szh-TW!2stw" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <div class='t_boxs to'>平鎮新勢公園(飛天曙光燈區)</div>
+        <div class='table'>
+          <div class='tr'>
+            <div class='td to tl tll' title='公車'>L208</div>
+            <div class='td to tll' title='行經路線'>內環黃線(免費公車)</div>
+            <div class='td to tll tdd' title='抵達燈區站牌名稱'>老街溪河川教育中心(中原路)</div>
+          </div>
+          <div class='tr'>
+            <div class='td to tl tll' title='公車'>301</div>
+            <div class='td to tll' title='行經路線'>桃園-楊梅</div>
+            <div class='td to tll tdd' title='抵達燈區站牌名稱'>新勢國小(新勢公園)</div>
+          </div>
+          <div class='tr'>
+            <div class='td to tl tll' title='公車'>5623</div>
+            <div class='td to tll' title='行經路線'>楊梅-捷運環北站(經中壢火車站)</div>
+            <div class='td to tll tdd' title='抵達燈區站牌名稱'>新勢國小(新勢公園)</div>
+          </div>
         </div>
 
+        </br></br>
         <!-- 02 -->
-        <div class='lantern_boxs'>
-          <div class='lantern_title sec_title'>中壢光明公園・大地曙光燈區</div>
-        </div>
-        </br></br>
-        <div class='video-container'>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3832.251455732897!2d121.2166172345899!3d24.960545037934928!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346823ccab27624d%3A0x8feb251df64fb200!2z5YWJ5piO5YWs5ZyS!5e0!3m2!1szh-TW!2stw!4v1578919742724!5m2!1szh-TW!2stw" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <div class='t_boxs to'>中壢光明公園(大地曙光燈區)</div>
+        <div class='table'>
+          <div class='tr'>
+            <div class='td to tl tll' title='公車'>L208</div>
+            <div class='td to tll' title='行經路線'>內環黃線(免費公車)</div>
+            <div class='td to tll tdd' title='抵達燈區站牌名稱'>中壢觀光夜市(新明路)</div>
+          </div>
         </div>
 
+        </br></br>
         <!-- 03 -->
-        <div class='lantern_boxs'>
-          <div class='lantern_title sec_title'>老街溪及老街溪河岸公園・銀河曙光燈區</div>
+        <div class='t_boxs to'>中壢老街溪河岸公園(銀河曙光燈區)</div>
+        <div class='table'>
+          <div class='tr'>
+            <div class='td to tl tll' title='公車'>120</div>
+            <div class='td to tll' title='行經路線'>捷運環北站-太子鎮</div>
+            <div class='td to tll tdd' title='抵達燈區站牌名稱'>興國市場(中豐北路)</div>
+          </div>
+          <div class='tr'>
+            <div class='td to tl tll' title='公車'>132</div>
+            <div class='td to tll' title='行經路線'>中壢-中央大學-高鐵桃園站</div>
+            <div class='td to tll tdd' title='抵達燈區站牌名稱'>河川教育中心(中正路)</div>
+          </div>
+          <div class='tr'>
+            <div class='td to tl tll' title='公車'>L208</div>
+            <div class='td to tll' title='行經路線'>內環黃線(免費公車)</div>
+            <div class='td to tll tdd' title='抵達燈區站牌名稱'>興國市場(元化路二段)、中央中豐路口</div>
+          </div>
+          <div class='tr'>
+            <div class='td to tl tll' title='公車'>703</div>
+            <div class='td to tll' title='行經路線'>竹圍-中壢</div>
+            <div class='td to tll tdd' title='抵達燈區站牌名稱'>中央中豐路口</div>
+          </div>
+          <div class='tr'>
+            <div class='td to tl tll' title='公車'>5623</div>
+            <div class='td to tll' title='行經路線'>楊梅-捷運環北站(經中壢火車站)</div>
+            <div class='td to tll tdd' title='抵達燈區站牌名稱'>興國市場(中豐北路)</div>
+          </div>
         </div>
-        </br></br>
-        <div class='video-container'>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3832.2835383343613!2d121.21724240891598!3d24.95951452059277!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb27a93f4eb17f9f7!2z6ICB6KGX5rqq5rKz5bK45YWs5ZyS!5e0!3m2!1szh-TW!2stw!4v1578919778638!5m2!1szh-TW!2stw" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </div>
-        </br></br>
-        <img class='all_img' src="img/tra01.png">
-        </br></br>
+
       </div>
     </div>
 
